<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_audio_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_record"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_video_record" />

    <Button
        android:id="@+id/btn_video_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_record"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_audio_record"
        app:layout_constraintBottom_toTopOf="@id/btn_audio_encode"/>

    <Button
        android:id="@+id/btn_audio_encode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_encode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_video_record"
        app:layout_constraintBottom_toTopOf="@id/btn_video_encode" />

    <Button
        android:id="@+id/btn_video_encode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_encode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_audio_encode"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>